--- a/index.html
+++ b/index.html
@@ -39,6 +39,41 @@ p {
 <p>This is a paragraph.</p>
 
 </body>
+</html>	<!DOCTYPE html>
+ 
+<html>
+   <head>
+      <title>Supercomputers</title>
+      <link type="text/css" rel="stylesheet" href="style.css">
+   </head>
+ 
+   <body>
+      <header>
+         Header
+     </header>
+ 
+     <nav>
+        Nav
+     </nav>
+ 
+     <div id="bigimage">
+        Plaatje
+     </div>
+ 
+     <main>
+        <article class="big">
+           Article
+        </article>
+        <article class="small">
+           Article
+        </article>
+ 
+     </main>
+ 
+     <footer>
+        Footer
+     </footer>
+  </body>
 </html>
 
 
