--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 </html>
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Mijn Website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  Mijn favoriete kleur is niks
+  
+</body>
+
+</html>
+<!DOCTYPE html>
+<html>
 <head>
 <style>
 body {
@@ -75,5 +91,5 @@ p {
      </footer>
   </body>
 </html>
-
+ 
 
