--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-  Mijn favoriete kleur is niks
+
  
 </body>
 
@@ -41,8 +41,7 @@ p {
 <body>
 
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<h1>BEM</h1>
 
 
 </body>
