--- a/index.html
+++ b/index.html
@@ -1,92 +1,123 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mijn Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png"> <https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-vector%2Fsport-car-logo-icon-template-illustration_35609367.htm&psig=AOvVaw2ESv5hCVLxXJYfPpCxiNbd&ust=1705062825516000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPD7g8Wu1YMDFQAAAAAdAAAAABAI>
+    <title>Jouw Geavanceerde Website</title>
+    <style>
+        /* ... (De vorige CSS blijft hier ongewijzigd) ... */
+
+        section.gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        section.gallery img {
+            width: 30%;
+            margin: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        section.gallery img:hover {
+            transform: scale(1.1);
+        }
+
+        form {
+            margin-top: 20px;
+            max-width: 400px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f5f5f5;
+        }
+
+        form label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        form input,
+        form textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        form button {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        form button:hover {
+            background-color: #555;
+        }
+    </style>
 </head>
-
-
 <body>
 
- 
+    <header>
+        <h1>Jouw Geavanceerde Website</h1>
+        <nav>
+            <ul>
+                <li><a href="benzine.html">Benzine auto's</a></li>
+                <li><a href="Elektrisch.html">Elektrische auto's</a></li>
+                <li><a href="motoren.html">Motoren</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Welkom op onze website</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+
+    <section>
+        <h2>Onze Diensten</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+
+    <section class="gallery">
+        <h2>Onze Galerij</h2>
+        <img src="image1.jpg" alt="Afbeelding 1">
+        <img src="image2.jpg" alt="Afbeelding 2">
+        <img src="image3.jpg" alt="Afbeelding 3">
+        <!-- Voeg hier meer afbeeldingen toe -->
+    </section>
+
+    <section>
+        <h2>Contacteer Ons</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+
+    <form>
+        <h2>Neem contact met ons op</h2>
+        <label for="name">Naam:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Bericht:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Verstuur</button>
+    </form>
+
+    <footer>
+        <p>&copy; 2024 Jouw Geavanceerde Website. Alle rechten voorbehouden.</p>
+    </footer>
+
 </body>
-
-
 </html>
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-  background-color: lightblue;
-}
-
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-</style>
-</head>
-<body>
-
-
-<h1>BEM</h1>
-
-
-</body>
-</html>  <!DOCTYPE html>
- 
-<html>
-   <head>
-      <title>Supercomputers</title>
-      <link type="text/css" rel="stylesheet" href="style.css">
-   </head>
- 
-   <body>
-      <header>
-         BEM
-     </header>
- 
-     <nav>
-        Nav
-     </nav>
- 
-     <div id="bigimage">
-        Plaatje
-     </div>
- 
-     <main>
-        <article class="big">
-           Article
-        </article>
-        <article class="small">
-           Article
-        </article>
- 
-     </main>
- 
-     <footer>
-        Footer
-     </footer>
-  </body>
-</html>
-
-</float <article class="small">
-    Article
- </article>
-
-
-
-
-
