--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png"> <https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-vector%2Fsport-car-logo-icon-template-illustration_35609367.htm&psig=AOvVaw2ESv5hCVLxXJYfPpCxiNbd&ust=1705062825516000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPD7g8Wu1YMDFQAAAAAdAAAAABAI>
-    <title>Jouw Geavanceerde Website</title>
+    <title>BEM</title>
     <style>
         /* ... (De vorige CSS blijft hier ongewijzigd) ... */
 
@@ -68,7 +68,7 @@
 <body>
 
     <header>
-        <h1>Jouw Geavanceerde Website</h1>
+        <h1>BEM</h1>
         <nav>
             <ul>
                 <li><a href="benzine.html">Benzine auto's</a></li>
@@ -97,8 +97,8 @@
     </section>
 
     <section>
-        <h2>Contacteer Ons</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h2>Hulp Nodig?</h2>
+        <p>Als je ons hulp nodig hebt dan kunt u hieronder de anquete invullen en jullie bericht erin zetten.</p>
     </section>
 
     <form>
